--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -48,43 +48,38 @@
       font-weight: bold;
   }
 
-  /* grid home */
+  /* home */
 
-  .grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr; 
-  grid-template-rows: 1fr 1fr;
-  padding-top: 30px;
-  /* gap: 10px;  */
-  height: 700px;
-  width: 1100px;
-  margin: auto;
+
+  .wrapper {
+    display: flex;
+    align-items: center;
+    background-color: rgb(32, 32, 32);
+    padding: 0 100px 0 100px;
   }
 
-  .grid-item {
-    background-color: rgba(0, 0, 0, .8);
-  padding: 20px;
-  font-size: 18px;
+  .box {
+    flex: 1;
+    padding: 10px;
+    width: 100px;
+    background-color: rgb(32, 32, 32);
+    margin: 50px;
+    text-align: center;
   }
-  .wrapper{
-    width: 100%;
-    background-image: url('https://c4.wallpaperflare.com/wallpaper/402/45/106/war-and-army-airsoft-wallpaper-preview.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 100px;
-    color: white;
 
+.box h1{
+  color: white;
+  font-weight: bold;
+  padding-bottom: 20px;
+}
+
+.box p{
+  color: rgb(141, 141, 141);
+  font-weight: bold;
+}
+
+  @media (max-width: 768px) {
+    .wrapper {
+      flex-direction: column;
     }
-
-  .wrapper .grid-container .grid-item .content{
-    padding-top: 40px;
   }
-  .wrapper .grid-container .grid-item span{
-    font-size: 16pt;
-  }
-
-  .section{
-    background-color: rgb(49, 49, 49);
-    height: 400px;
-  }
-
