--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -56,17 +56,18 @@
   .wrapper {
     display: flex;
     align-items: center;
-    /* background-color: rgb(32, 32, 32); */
+    background-size: cover; 
+    background-repeat: no-repeat;
     background-image: url('https://images.hdqwalls.com/wallpapers/call-of-duty-mobile-4k-game-2019-3a.jpg');
     padding: 0 100px 0 100px;
-    height: 1200px;
+    height: 1500px;
   }
 
   .box {
     flex: 1;
     padding: 10px;
     width: 100px;
-    margin: 50px;
+    margin: 0px 50px 200px 50px;
     text-align: left;
   }
 
@@ -82,6 +83,31 @@
   font-size: 20pt;
 
 }
+
+.section{
+ 
+  position: absolute;
+  bottom: 0; 
+  left: 0; 
+  width: 90%;
+  height: 300px;
+}
+
+.box .btn-group a{
+  background-color: rgb(235, 235, 2); 
+  color: black; 
+  padding: 15px 25px 15px 25px;
+  font-size: 15pt;
+  font-weight: bold;
+  margin: 20px 0px 0px 0px;
+}
+
+.box .btn-group a:hover{
+  text-decoration: none;
+  
+}
+
+
 
   @media (max-width: 768px) {
     .wrapper {
