--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -42,8 +42,8 @@
     padding-right: 30px;
     color: white;
     text-decoration: none;
-    font-size: 17pt;
-    font-weight: bold;
+    font-size: 16pt;
+    /* font-weight: bold; */
 
   }
   span{
@@ -60,7 +60,7 @@
     background-repeat: no-repeat;
     background-image: url('https://images.hdqwalls.com/wallpapers/call-of-duty-mobile-4k-game-2019-3a.jpg');
     padding: 0 100px 0 100px;
-    height: 1500px;
+    height: 800px;
   }
 
   .box {
