--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,48 +7,57 @@
 
 
 /* navbar */
+.navbar {
+  background-color: black;
+  height: 100px; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  color: white;
 
-  .navbar {
-    background-color: black;
-    height: 100px; 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
-    color: white;
-  }
+}
 
-  .navbar img {
-    height: 40px; 
-    margin-right: 10px; 
-  }
+.navbar img {
+  height: 40px; 
+  margin-right: 10px; 
+}
 
+.navbar .slogan {
+  font-size: 25pt; 
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.navbar ul li {
+  margin-left: 10px; 
+}
+
+.navbar ul li a {
+  padding-right: 30px;
+  color: white;
+  text-decoration: none;
+  font-size: 16pt;
+}
+
+/* Media Query für größere Bildschirme */
+@media (min-width: 1200px) {
   .navbar .slogan {
-    font-size: 25pt; 
+    font-size: 30pt;
+    font-weight: bold;
   }
-
-  .navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-
-  .navbar ul li {
-    margin-left: 10px; 
-  }
-
+  
   .navbar ul li a {
-    padding-right: 30px;
-    color: white;
-    text-decoration: none;
-    font-size: 16pt;
-    /* font-weight: bold; */
+    font-size: 18pt;
+  }
+}
 
-  }
-  span{
-      font-weight: bold;
-  }
+
 
   /* home */
 
@@ -56,11 +65,10 @@
   .wrapper {
     display: flex;
     align-items: center;
-    background-size: cover; 
+    background-size: cover;
     background-repeat: no-repeat;
-    background-image: url('https://images.hdqwalls.com/wallpapers/call-of-duty-mobile-4k-game-2019-3a.jpg');
     padding: 0 100px 0 100px;
-    height: 800px;
+    height: 100vh; /* Höhe auf 100% der Bildschirmhöhe setzen */
   }
 
   .box {
@@ -131,7 +139,6 @@
 
 .calendar-wrapper{
   background-size: cover; 
-  background-image: url('https://media.istockphoto.com/id/928856142/photo/military-uniform-pattern-with-blur-effect.jpg?s=612x612&w=0&k=20&c=f21cdH1l_QVfVW8u6bpjnkWzl2SHxFUsLGIRsQ4Zqic=');
   background-repeat: no-repeat;
   width: 100%;
 }
