--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -123,8 +123,16 @@
     }
   }
 
+  /* Userlist */
+
+.verified{
+  color: green;
+}
 
 
+.not-verified{
+  color: red;
+}
 /* calendar */
 
 .calendar-wrapper .container #calendar{
