--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,13 +49,14 @@
 
 .navbar ul li {
   margin-left: 10px; 
+  padding: 10px;
 }
 
 .navbar ul li a {
   padding-right: 30px;
   color: white;
   text-decoration: none;
-  font-size: 16pt;
+  font-size: 20pt;
 }
 
 
